# Polyhedral-FEA

./: .gitattributes  .gitignore  BENCHMARKS.md  CHANGES.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  PHASES.md  PROGRESS.md  README.md  SPEC.md  build.bat  build.sh  imgui.ini  test-part.stl
.claude/commands/: audit.md  loop.md
.github/workflows/: ci.yml
apps/bench/: CMakeLists.txt  d6_tier3.cpp
apps/cli/: CMakeLists.txt  main.cpp
apps/gui/: CMakeLists.txt  main.cpp  theme.cpp  theme.hpp  viewport.cpp  viewport.hpp  widgets.cpp  widgets.hpp
apps/testlab/: main.cpp
bench/campaigns/settings-frontier-1/: PARETO.json  PARETO.md  campaign.json  checkpoint.json  progress.json  results.jsonl
bench/competitive/peers/: run_calculix_cantilever.py
bench/geometries/public/: unit_box.stl
bench/mesher/: run_mesher_scoreboard.py
bench/mesher/shots/: cylinder_prism_graded.json  cylinder_prism_hybrid.json  plate_graded.json  plate_hybrid.json  test_graded.json  test_hex.json  test_hybrid.json  test_octa.json  unit_box_graded.json  unit_box_hybrid.json
bench/reference/: goodier-cavity.json  kirsch-plate.json  l-domain.json
bench/reports/: p1-gate1-convergence.md
bench/results/: calculix-cantilever-smoke.json
crates/adapt/: Cargo.toml
crates/adapt/src/: lib.rs
crates/bench/: Cargo.toml
crates/bench/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/fea/: Cargo.toml
crates/fea/src/: lib.rs
crates/geom/: Cargo.toml
crates/geom/src/: lib.rs  stl.rs
crates/mesh/: Cargo.toml
crates/mesh/src/: lib.rs
docs/: ROADMAP.md  ideas-from-fea-madness.md  phases.md  progress.md  solver-core.md  spec.md
docs/bench/: scoreboard.md
docs/dag/: AGENT_BOOTSTRAP.md  PROGRAM.yaml  README.md  interfaces.md
docs/decisions/: 0001-geometry-kernel.md  0002-license-agplv3.md  0002-license-bsd3.md  0003-element-formulations.md  0004-mesh-data-structure.md  0005-benchmark-baseline.md  0006-gui-after-solver-core.md  0007-language-cpp.md  0009-tier1-verification-setups.md  0010-mesh-data-structure-edge-vs-face.md  0011-vem-k1.md  0012-hybrid-graded-tet.md  0013-hex-pyramid-transition.md  0015-grid-fill-limits.md  0018-graded-conformity.md
docs/gui/: theme-layout.md
docs/plans/: mesher-solver-overhaul.md
docs/process/: agent-loop.md  agents-notes.md
examples/: README.md  geometries  run_mesh_public.sh  run_solve_public.sh
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
scripts/: mesh_preview.py  vtu_wire_png.py
src/adapt/: CMakeLists.txt
src/adapt/include/adapt/: error.hpp  hp_driver.hpp  loop.hpp  sizing_field.hpp
src/adapt/src/: error.cpp  hp_driver.cpp  loop.cpp  sizing_field.cpp
src/bench/: CMakeLists.txt
src/bench/include/bench/: reference_case.hpp
src/bench/src/: reference_case.cpp
src/fea/: CMakeLists.txt
src/fea/include/fea/: assembly.hpp  backend.hpp  boundary_faces.hpp  element.hpp  hp_assembly.hpp  material.hpp  msh.hpp  nodal_mesh.hpp  quadrature.hpp  shape.hpp  solve.hpp  stress.hpp  traction.hpp  vem.hpp  vtu.hpp  zz.hpp
src/fea/src/: assembly.cpp  backend.cpp  backend_cuda.cu  boundary_faces.cpp  hp_assembly.cpp  material.cpp  msh.cpp  nodal_mesh.cpp  quadrature.cpp  shape.cpp  solve.cpp  spmv.cpp  stress.cpp  traction.cpp  vem.cpp  vtu.cpp  zz.cpp
src/geom/: CMakeLists.txt
src/geom/include/geom/: features.hpp  indicators.hpp  stl.hpp  tri_surface.hpp
src/geom/src/: features.cpp  indicators.cpp  stl.cpp  tri_surface.cpp
src/gui/: CMakeLists.txt  main.cpp  scene.cpp  scene.hpp  theme.cpp  theme.hpp  viewport.cpp  viewport.hpp
src/mesh/: CMakeLists.txt
src/mesh/include/mesh/: cell_stamp.hpp  hex_fill.hpp  hybrid_fill.hpp  local_refine.hpp  mixed_fill.hpp  poly_mesh.hpp  prism_fill.hpp  quality.hpp  surface_metrics.hpp  surface_project.hpp  tet_fill.hpp  transition_fill.hpp
src/mesh/src/: cell_stamp.cpp  grid_classify.cpp  hex_fill.cpp  hybrid_fill.cpp  local_refine.cpp  mixed_fill.cpp  octa_fill.cpp  poly_mesh.cpp  prism_fill.cpp  quality.cpp  surface_metrics.cpp  surface_project.cpp  tet_fill.cpp  transition_fill.cpp
src/pipeline/: CMakeLists.txt
src/pipeline/include/pipeline/: scene.hpp
src/pipeline/src/: scene.cpp
tests/: CMakeLists.txt  test_backend.cpp  test_cantilever.cpp  test_curved_mesh_quality.cpp  test_d6_bench_smoke.cpp  test_features.cpp  test_goodier_cavity.cpp  test_graded_fill.cpp  test_gui_pipeline.cpp  test_hp_assembly.cpp  test_hp_driver.cpp  test_indicators.cpp  test_iterative_solve.cpp  test_kirsch_plate.cpp  test_l_domain.cpp  test_lame_cylinder.cpp  test_material.cpp  test_mesh_conformity.cpp  test_mixed_fill.cpp  test_mms_convergence.cpp  test_msh.cpp  test_p_elevate.cpp  test_poly_mesh.cpp  test_prism_fill.cpp  test_product_mesh_tier1.cpp  test_pyramid.cpp  test_quadrature.cpp  test_reference_case.cpp  test_shape.cpp  test_sizing_field.cpp  test_stl.cpp  test_tet_fill.cpp  test_tier0.cpp  test_transition_fill.cpp  test_tri_surface.cpp  test_vem.cpp  test_vtu.cpp  test_zz.cpp
tests/fixtures/: test.stl
tests/support/: mms.cpp  mms.hpp  structured_mesh.cpp  structured_mesh.hpp
