[workspace]
resolver = "3"
members = [
    "crates/geom",
    "crates/mesh",
    "crates/adapt",
    "crates/fea",
    "crates/bench",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Hunter-124/Polyhedral-FEA"
authors = ["Hunter-124"]

[workspace.dependencies]
nalgebra = "0.34"
faer = "0.22"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rand = "0.9"
rand_chacha = "0.9"

geom = { path = "crates/geom" }
mesh = { path = "crates/mesh" }
adapt = { path = "crates/adapt" }
fea = { path = "crates/fea" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[profile.release]
lto = "thin"
debug = 1
