[package]
name = "bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Verification harness: Tier 0-3 suites, reference-value loading, anti-cheat audit tooling"

[dependencies]
geom.workspace = true
mesh.workspace = true
adapt.workspace = true
fea.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
rand_chacha.workspace = true
thiserror.workspace = true

[lints]
workspace = true
