[package]
name = "polymesh"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "PolyMesh CLI: mesh, solve, adapt, benchmark"

[[bin]]
name = "polymesh"
path = "src/main.rs"

[dependencies]
geom.workspace = true
mesh.workspace = true
adapt.workspace = true
fea.workspace = true
clap = { version = "4", features = ["derive"] }

[lints]
workspace = true
