[package]
name = "fea"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Linear elastostatics: unified Element trait (isoparametric FEM + VEM), assembly, sparse solve"

[dependencies]
mesh.workspace = true
nalgebra.workspace = true
faer.workspace = true
rayon.workspace = true
thiserror.workspace = true

[lints]
workspace = true
