[package]
name = "geom"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Geometry kernel interface: STL input + B-rep/STEP via OpenCASCADE (feature-gated), discrete feature analysis"

[features]
default = []
# Heavy C++ FFI build; enable for STEP/B-rep import (ADR-0001).
# Uncomment the dependency below when Phase P3 geometry work begins.
# occ = ["dep:opencascade"]

[dependencies]
nalgebra.workspace = true
thiserror.workspace = true

[lints]
workspace = true
